# dtkaudiomanager

./: CMakeLists.txt  README.md  README.zh_CN.md
dde-daemon-plugin/: daudiomanager_daemon.cpp  daudiomanager_daemon.h
debian/: changelog  control  copyright  rules
examples/: CMakeLists.txt  main.cpp
include/: audiomanager_global.h  daudiocard.h  daudiomanager.h  daudioport.h
src/: CMakeLists.txt  daudio_p.h  daudiocard.cpp  daudiomanager.cpp  daudioport.cpp  dpulseaudio.cpp  dpulseaudio.h
